--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -10,6 +10,7 @@ permissions:
 
 jobs:
   version:
+    if: "!contains(github.event.head_commit.message, '[skip ci]')"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
